--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-bovo (4:4.10.2-1) UNRELEASED; urgency=low
+bovo (4:4.10.2-1) experimental; urgency=low
 
   * First release of kdegames after being split by upstream.
 
