--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bovo (4:4.10.2-2) UNRELEASED; urgency=low
+
+  * Fix erroneous Upstream-Name in debian/copyright. 
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 08 Apr 2013 14:04:15 +0200
+
 bovo (4:4.10.2-1) experimental; urgency=low
 
   * First release of kdegames after being split by upstream.
