--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ bovo (4:4.10.2-2) UNRELEASED; urgency=low
   * Remove legacy links file.
   * Add generated icon files.
   * Add a basic manpage.
+  * Reshuffle dependencies to reduce resolver tries.
 
  -- Maximiliano Curia <maxy@debian.org>  Mon, 08 Apr 2013 14:04:15 +0200
 
