--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-bovo (4:4.10.2-2) UNRELEASED; urgency=low
+bovo (4:4.10.2-2) experimental; urgency=low
 
   * Fix erroneous Upstream-Name in debian/copyright.
   * Remove legacy links file.
@@ -6,7 +6,7 @@ bovo (4:4.10.2-2) UNRELEASED; urgency=low
   * Add a basic manpage.
   * Reshuffle dependencies to reduce resolver tries.
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 08 Apr 2013 14:04:15 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 02 May 2013 11:00:15 +0200
 
 bovo (4:4.10.2-1) experimental; urgency=low
 
