--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bovo (4:4.10.3-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 14 May 2013 10:42:29 +0200
+
 bovo (4:4.10.2-2) experimental; urgency=low
 
   * Fix erroneous Upstream-Name in debian/copyright.
