--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-bovo (4:4.10.4-1) UNRELEASED; urgency=low
+bovo (4:4.10.4-1) experimental; urgency=low
 
   * New upstream release.
   * Update vcs fields.
 
- -- Maximiliano Curia <maxy@debian.org>  Sat, 08 Jun 2013 18:37:10 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 14 Jun 2013 10:55:10 +0200
 
 bovo (4:4.10.2-2) experimental; urgency=low
 
