--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-bovo (4:4.11.3-1) UNRELEASED; urgency=low
+bovo (4:4.11.3-1) unstable; urgency=low
 
   * New upstream release.
   * Update build dependencies.
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 07 Nov 2013 10:19:51 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 07 Nov 2013 14:28:45 +0100
 
 bovo (4:4.11.2-1) experimental; urgency=low
 
