--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bovo (4:4.11.3-2) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 29 Jan 2014 18:47:50 +0100
+
 bovo (4:4.11.3-1) unstable; urgency=low
 
   * New upstream release.
