--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-bovo (4:4.11.3-2) UNRELEASED; urgency=medium
+bovo (4:4.11.3-2) unstable; urgency=medium
 
   * Do not disable an empty test set.
   * Bump Standards-Version to 3.9.5, no changes needed.
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 29 Jan 2014 18:47:50 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 03 Apr 2014 11:21:02 +0200
 
 bovo (4:4.11.3-1) unstable; urgency=low
 
