--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-bovo (4:14.12.0-0ubuntu1) UNRELEASED; urgency=medium
+bovo (4:14.12.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
   * Remove kdelibs5-dev depend version as there was not a new release.
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 11 Dec 2014 15:18:56 -0800
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 15 Dec 2014 16:16:57 +0100
 
 bovo (4:14.11.97-0ubuntu1) vivid; urgency=medium
 
