--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-bovo (4:14.12.2-0ubuntu1) UNRELEASED; urgency=medium
+bovo (4:14.12.2-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 05 Feb 2015 20:48:53 +0000
+ -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 10 Feb 2015 08:49:13 -0800
 
 bovo (4:14.12.0-0ubuntu1) vivid; urgency=medium
 
