--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-bovo (4:14.12.2-1~) UNRELEASED; urgency=medium
+bovo (4:14.12.2-1) experimental; urgency=medium
 
   * New upstream release (14.12.2).
   * Bump Standards-Version to 3.9.6, no changes needed.
 
- -- Maximiliano Curia <maxy@debian.org>  Sat, 21 Feb 2015 07:50:16 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 21 Feb 2015 11:05:00 +0100
 
 bovo (4:14.12.2-0ubuntu1) vivid; urgency=medium
 
