--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-bovo (4:14.12.3-0ubuntu1) UNRELEASED; urgency=medium
+bovo (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 09 Mar 2015 09:06:39 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 13 Mar 2015 13:56:35 -0700
 
 bovo (4:14.12.2-1) experimental; urgency=medium
 
