--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-bovo (4:14.12.3-1~) UNRELEASED; urgency=medium
+bovo (4:14.12.3-1) experimental; urgency=medium
 
   * New upstream release (14.12.3).
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 26 Mar 2015 12:32:30 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Sun, 29 Mar 2015 15:13:38 +0200
 
 bovo (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
