--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-bovo (4:15.04.0-0ubuntu1) UNRELEASED; urgency=medium
+bovo (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 15 Apr 2015 11:27:37 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 13 May 2015 21:01:59 -0700
 
 bovo (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
