--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-bovo (4:15.08.0-0ubuntu1) UNRELEASED; urgency=medium
+bovo (4:15.08.0-0ubuntu1) wily; urgency=medium
 
   * new upstream release
 
- -- Ubuntu <ubuntu@ip-10-170-33-178.ec2.internal>  Thu, 20 Aug 2015 13:00:44 +0000
+ -- Ubuntu <ubuntu@ip-10-170-33-178.ec2.internal>  Wed, 26 Aug 2015 16:13:10 +0100
 
 bovo (4:15.07.90-0ubuntu1) wily; urgency=medium
 
