--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-bovo (4:15.04.1-1~) UNRELEASED; urgency=medium
+bovo (4:15.08.0-1~) UNRELEASED; urgency=medium
 
   * New upstream release (15.04.0).
   * New upstream release (15.04.1).
+  * New upstream release (15.08.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 18 May 2015 14:11:04 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sun, 06 Sep 2015 16:25:38 +0200
 
 bovo (4:14.12.3-1) experimental; urgency=medium
 
