--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-bovo (4:15.08.0-1~) UNRELEASED; urgency=medium
+bovo (4:15.08.0-1) unstable; urgency=medium
 
   * New upstream release (15.04.0).
   * New upstream release (15.04.1).
   * New upstream release (15.08.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Sun, 06 Sep 2015 16:25:38 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 07 Sep 2015 23:27:34 +0200
 
 bovo (4:15.08.0-0ubuntu1) wily; urgency=medium
 
