--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bovo (4:15.08.1-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release (15.18.1)
+
+ -- Clive Johnston <clivejo@aol.com>  Wed, 16 Sep 2015 22:45:20 +0100
+
 bovo (4:15.08.0-0ubuntu1) wily; urgency=medium
 
   * new upstream release
