--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-bovo (4:15.08.1-0ubuntu1) UNRELEASED; urgency=medium
+bovo (4:15.08.2-0ubuntu1) UNRELEASED; urgency=medium
 
   * Vivid backport
+  * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 01 Oct 2015 09:10:19 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 09 Oct 2015 12:58:11 -0700
 
 bovo (4:15.08.1-0ubuntu1) wily; urgency=medium
 
