--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
+bovo (4:15.08.3-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Vivid backport. 
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 27 Oct 2015 02:58:15 +0000
+
 bovo (4:15.08.2-0ubuntu1) wily; urgency=medium
 
-  * Vivid backport
   * New upstream release
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 14 Oct 2015 11:48:32 +0100
