--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 bovo (4:15.12.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Clive Johnston ]
   * New upstream release
+
+  [ Philip Muškovac ]
+  * Merge with debian git master
 
  -- Clive Johnston <clivejo@aol.com>  Sat, 02 Jan 2016 13:26:23 +0000
 
