--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-bovo (4:15.12.1-0ubuntu1) UNRELEASED; urgency=medium
+bovo (4:15.12.1-0ubuntu1) xenial; urgency=medium
 
   [ Clive Johnston ]
   * New upstream release
@@ -6,7 +6,7 @@ bovo (4:15.12.1-0ubuntu1) UNRELEASED; urgency=medium
   [ Philip Muškovac ]
   * Merge with debian git master
 
- -- Clive Johnston <clivejo@aol.com>  Sat, 02 Jan 2016 13:26:23 +0000
+ -- Clive Johnston <clivejo@aol.com>  Wed, 09 Mar 2016 10:22:22 +0100
 
 bovo (4:15.08.3-1) unstable; urgency=medium
 
