--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-bovo (4:15.12.2-0ubuntu1) UNRELEASED; urgency=medium
+bovo (4:15.12.3-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream bugfix release
+  * New upstream bugfix release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 09 Mar 2016 20:44:02 -0800
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 16 Mar 2016 18:50:41 -0700
 
 bovo (4:15.12.1-0ubuntu2) xenial; urgency=medium
 
