--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,6 @@
-bovo (4:16.04.0-1~2.gbpb9763d) UNRELEASED; urgency=medium
-
-  ** SNAPSHOT build @b9763d5b5cbc9e9ec645bf7e97d3e5ba4b4206d9 **
+bovo (4:16.04.0-1) unstable; urgency=medium
 
   [ Automatic packaging ]
-  ** SNAPSHOT build @ab5f2db176fd58f74de74e4dbcd3c511f545671e **
-
   * Bump Standards-Version to 3.9.8
   * Update build-deps and deps with the info from cmake
 
@@ -14,7 +10,7 @@ bovo (4:16.04.0-1~2.gbpb9763d) UNRELEASED; urgency=medium
   * Add upstream metadata (DEP-12)
   * debian/control: Update Vcs-Browser and Vcs-Git fields
 
- -- Maximiliano Curia <maxy@gnuservers.com.ar>  Mon, 09 May 2016 12:59:17 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 28 May 2016 18:52:42 +0200
 
 bovo (4:15.12.1-1) experimental; urgency=medium
 
