--- a/debian/changelog
+++ b/debian/changelog
@@ -1,16 +1,12 @@
-bovo (4:16.08.1-1~1.gbpbf1a5d) UNRELEASED; urgency=medium
-
-  ** SNAPSHOT build @bf1a5d9f0e8b8f0c0d53f531f18cf36bdccf1b28 **
+bovo (4:16.08.1-1) unstable; urgency=medium
 
   [ Maximiliano Curia ]
-  ** SNAPSHOT build @31dc002e114f45c735e91846a4ad97e0c733b759 **
-
-  * UNRELEASED
+  * New upstream release (16.08.1)
 
   [ Automatic packaging ]
   * Update build-deps and deps with the info from cmake
 
- -- Automatic packaging <maxy+jenkins@gnuservers.com.ar>  Thu, 08 Sep 2016 22:59:37 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 19 Oct 2016 00:03:21 +0200
 
 bovo (4:16.04.0-1) unstable; urgency=medium
 
