--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-bovo (4:17.08.0-1~) UNRELEASED; urgency=medium
+bovo (4:17.08.0-1~1) UNRELEASED; urgency=medium
 
   * New upstream release (17.08.0)
   * Bump Standards-Version to 4.1.0.
   * Update upstream metadata
+  * Update uploaders list as requested by MIA team (Closes: #879294)
 
- -- Maximiliano Curia <maxy@debian.org>  Sun, 03 Sep 2017 17:02:50 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 31 Oct 2017 17:58:14 +0100
 
 bovo (4:17.08.0-0neon) xenial; urgency=medium
 
