--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ bovo (4:17.08.3-1~1) UNRELEASED; urgency=medium
     everything to the final location
     - drop bovo.install, no more useful now
   * Bump Standards-Version to 4.1.1, no changes required.
+  * Simplify watch file, and switch it to https.
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 31 Oct 2017 17:58:14 +0100
 
