--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,6 @@
-bovo (4:17.08.3-1~1) UNRELEASED; urgency=medium
+bovo (4:17.08.3-1) unstable; urgency=medium
+
+  * Team upload.
 
   [ Maximiliano Curia ]
   * New upstream release (17.08.0)
@@ -18,7 +20,7 @@ bovo (4:17.08.3-1~1) UNRELEASED; urgency=medium
   * Remove unused libkf5declarative-dev, libkf5kdelibs4support-dev, and
     libkf5newstuff-dev build dependencies.
 
- -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 31 Oct 2017 17:58:14 +0100
+ -- Pino Toscano <pino@debian.org>  Sat, 18 Nov 2017 10:07:25 +0100
 
 bovo (4:17.08.0-0neon) xenial; urgency=medium
 
